<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    tools:context=".ui.newService">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_label_titulo"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/app_label_nome_cliente"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <GridLayout
        android:layout_width="410dp"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:paddingStart="48dp"
        android:paddingEnd="0dp"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        app:layout_constraintVertical_bias="0.33">

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:text="@string/app_btn_cadastrar_servico"
            android:textColor="@color/text_color"
            app:backgroundTint="@color/background_color_btn"
            app:cornerRadius="8dp"
            app:strokeColor="@color/background_color_btn_border"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:text="@string/cancelar"
            android:textColor="@color/text_color"
            app:backgroundTint="@color/error"
            app:cornerRadius="8dp"
            app:strokeColor="@color/background_color_btn_border"
            app:strokeWidth="2dp" />

    </GridLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/app_label_telefone"
        android:textColor="@color/text_color"

        android:textColorHint="@color/text_color_hint"
        android:textSize="20sp"


        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/app_label_hint_equipamento"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_label_equipamento"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/app_label_hint_telefone"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent="0.8" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/app_label_hint_cliente"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>